[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/edit/SystemView.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/edit/SystemEditor.gd" type="Script" id=2]
[ext_resource path="res://ui/edit/SystemTree.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/edit/Autosave.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/LiberationMono-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/edit/IDNamePopup.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="SystemEditor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
IDNamePopup = ExtResource( 6 )

[node name="Autosave" parent="." instance=ExtResource( 4 )]

[node name="Split" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ViewportContainer" parent="Split"]
margin_right = 696.0
margin_bottom = 600.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 2
mouse_default_cursor_shape = 3
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
stretch = true

[node name="View" type="Viewport" parent="Split/Left"]
size = Vector2( 696, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="SystemView" parent="Split/Left/View" instance=ExtResource( 1 )]

[node name="Right" type="VSplitContainer" parent="Split"]
margin_left = 708.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="GridContainer" parent="Split/Right"]
margin_right = 316.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4

[node name="Buttons" type="GridContainer" parent="Split/Right/Top"]
margin_right = 316.0
margin_bottom = 21.0
size_flags_vertical = 0
columns = 6

[node name="Sector" type="Button" parent="Split/Right/Top/Buttons"]
margin_right = 60.0
margin_bottom = 21.0
text = "Sector"

[node name="Save" type="Button" parent="Split/Right/Top/Buttons"]
margin_left = 64.0
margin_right = 108.0
margin_bottom = 21.0
text = "Save"

[node name="Load" type="Button" parent="Split/Right/Top/Buttons"]
margin_left = 112.0
margin_right = 156.0
margin_bottom = 21.0
text = "Load"

[node name="Undo" type="Button" parent="Split/Right/Top/Buttons"]
margin_left = 160.0
margin_right = 204.0
margin_bottom = 21.0
text = "Undo"

[node name="Redo" type="Button" parent="Split/Right/Top/Buttons"]
margin_left = 208.0
margin_right = 252.0
margin_bottom = 21.0
text = "Redo"

[node name="Fleets" type="Button" parent="Split/Right/Top/Buttons"]
margin_left = 256.0
margin_right = 316.0
margin_bottom = 21.0
text = "Fleets"

[node name="Tree" parent="Split/Right/Top" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 316.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bottom" type="Panel" parent="Split/Right"]
margin_top = 196.0
margin_right = 316.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Settings" type="RichTextLabel" parent="Split/Right/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="Split/Left" to="." method="_on_Left_focus_entered"]
[connection signal="focus_exited" from="Split/Left" to="." method="_on_Left_focus_exited"]
[connection signal="resized" from="Split/Left" to="Split/Left/View/SystemView" method="view_resized"]
[connection signal="resized" from="Split/Left" to="." method="_on_Left_resized"]
[connection signal="make_new_space_object" from="Split/Left/View/SystemView" to="." method="_on_SystemView_make_new_space_object"]
[connection signal="request_focus" from="Split/Left/View/SystemView" to="." method="_on_SystemView_request_focus"]
[connection signal="select_nothing" from="Split/Left/View/SystemView" to="." method="_on_select_nothing"]
[connection signal="select_space_object" from="Split/Left/View/SystemView" to="." method="_on_System_View_select_space_object"]
[connection signal="pressed" from="Split/Right/Top/Buttons/Sector" to="." method="_on_Sector_pressed"]
[connection signal="pressed" from="Split/Right/Top/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Split/Right/Top/Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Split/Right/Top/Buttons/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="Split/Right/Top/Buttons/Redo" to="." method="_on_Redo_pressed"]
[connection signal="pressed" from="Split/Right/Top/Buttons/Fleets" to="." method="_on_Fleets_pressed"]
[connection signal="center_on_node" from="Split/Right/Top/Tree" to="." method="_on_Tree_center_on_node"]
[connection signal="deselect_node" from="Split/Right/Top/Tree" to="." method="_on_select_nothing"]
[connection signal="select_node" from="Split/Right/Top/Tree" to="." method="_on_Tree_select_space_object"]
